completed two api requests

--- a/Project5/resources/config.properties
+++ b/Project5/resources/config.properties
@@ -1,2 +1,5 @@
 project.year=2022
 project.semester=Fall
+harvardapi.apikey=ac4b0b37-ea15-46f2-90b2-cfdb59001bc4
+imaggaapi0.apikey=acc_dde4aa4a5a69510
+imaggaapi0.apisecret=b4d0c98a1407949d0288ae75f23c7023
